# Antonida-clean-arch-ai

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
.dvc/tmp/: lock
data/: .gitignore  docs.dvc  reviews.csv  reviews.csv.dvc
data/docs/invoices/: inv_001.txt
models/: .gitignore  classifier.onnx.dvc  sentiment_model.onnx.dvc
scripts/: init_minio.py  train_model.py
src/application/: services.py
src/domain/: entities.py  interfaces.py
src/infrastructure/: __init__.py  csv_reader.py  models.py  storage.py
src/presentation/: api.py  cli.py  dependencies.py  schemas.py
tests/: conftest.py  test_model_direct.py  test_services.py
tests/integration/: test_model_inference.py
tests/unit/: test_review_processing_service.py  test_review_service.py
