[tool.poetry]
name = "clean-arch-ai"
version = "0.1.0"
description = "AI System Skeleton based on Clean Architecture"
authors = ["ZireaelKS Iliveyou2610@gmail.com"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
